--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1508,7 +1508,16 @@ label {
   body {
     width: 21cm;
     height: 29.7cm;
-    margin: 30mm 45mm 30mm 45mm;
+    margin: 20mm auto;
+  }
+
+  .print .print-main {
+    min-width: 0;
+  }
+  .print .print-main .print-main-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
   }
 }
 /* _modal.scss 
