--- a/src/main/resources/public/src/scss/document/_print.scss
+++ b/src/main/resources/public/src/scss/document/_print.scss
@@ -61,6 +61,19 @@
   body {
     width: 21cm;
     height: 29.7cm;
-    margin: 30mm 45mm 30mm 45mm; 
+    margin: 20mm auto;
+  }
+
+  .print {
+
+    .print-main {
+      min-width: 0;
+
+      .print-main-header {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 }
