#10087 동적 차트 데이터로 차트 그리기 -> MR 응대 (block/none 옵션 제거)

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -38,6 +38,8 @@
 </body>
 <th:block layout:fragment="pageScript">
     <script th:src="@{/assets/vendors/highCharts/highcharts.js}"></script>
+    <script th:src="@{/assets/vendors/highCharts/modules/no-data-to-display.js}"></script>
+    <script th:src="@{/assets/vendors/highCharts/plugin/pattern-fill-v2.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
         let offsetCount = 0;
@@ -161,7 +163,6 @@
                         callback: function (modal) {
                             if (getChartDto() !== undefined) {
                                 restSubmit('post', '/rest/charts/' + chartId + '/preview', getChartDto(), function (response) {
-                                    document.getElementById('container').style.display = 'block';
                                     let responseJson = JSON.parse(response);
                                     let data = parsedPropertyJson(responseJson.chartConfig, responseJson.propertyJson);
                                     Highcharts.chart('container', data);
@@ -268,8 +269,6 @@
                         if (chartId !== undefined) {
                             let data = parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
                             Highcharts.chart('container', data);
-                        } else {
-                            document.getElementById('container').style.display = 'none';
                         }
                     }
                 }
