#10333 [highcharts] 데이터 없을때 빈 차트 출력

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4657,41 +4657,36 @@ body.modal-active {
   vertical-align: bottom;
   padding-bottom: 0.625rem;
 }
-.modal-dialog.chart-edit-modal, .modal-dialog.cmdb-class-attribute-modal, .modal-dialog.token-list {
+.modal-dialog.cmdb-class-attribute-modal, .modal-dialog.token-list {
   width: 62.5rem;
   height: 53.0625rem;
 }
-.modal-dialog.chart-edit-modal .modal-content, .modal-dialog.cmdb-class-attribute-modal .modal-content, .modal-dialog.token-list .modal-content {
+.modal-dialog.cmdb-class-attribute-modal .modal-content, .modal-dialog.token-list .modal-content {
   height: calc(53.0625rem - 3.375rem - 5rem);
   padding: 0.625rem 1.25rem 2.5rem 1.25rem;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list,
 .modal-dialog.token-list .modal-content .related-instance-list {
   margin-top: 0.9375rem;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set,
 .modal-dialog.token-list .modal-content .related-instance-list .table-set {
   margin-top: 2.188rem;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table,
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table {
   width: 100%;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table .list-head tr,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table .list-head tr, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-head tr,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-head tr,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .list-head tr, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .list-head tr,
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table .list-head tr {
   color: #3F4B56;
   border-bottom: 0.125rem solid #E1E3E6;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table .list-body, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .list-body, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .list-body,
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table .list-body {
   display: block;
@@ -4700,10 +4695,7 @@ body.modal-active {
   color: #586872;
   overflow-y: auto;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list,
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .instance-list,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table .list-body .attribute-list,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table .list-body .instance-list, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .instance-list,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .list-body .attribute-list,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .list-body .instance-list, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list,
@@ -4715,10 +4707,7 @@ body.modal-active {
   height: 3.125rem;
   line-height: 3.125rem;
 }
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list > td,
-.modal-dialog.chart-edit-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .instance-list > td,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table .list-body .attribute-list > td,
-.modal-dialog.chart-edit-modal .modal-content .related-instance-list .table-set table .list-body .instance-list > td, .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list > td,
+.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list > td,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .list-body .instance-list > td,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .list-body .attribute-list > td,
 .modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .list-body .instance-list > td, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .list-body .attribute-list > td,
@@ -4727,6 +4716,21 @@ body.modal-active {
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table .list-body .instance-list > td {
   display: inline-block;
   vertical-align: middle;
+}
+.modal-dialog.chart-edit-modal {
+  width: 62.5rem;
+  height: 53.0625rem;
+}
+.modal-dialog.chart-edit-modal .modal-content {
+  height: calc(53.0625rem - 3.375rem - 5rem);
+  padding: 0.625rem 1.25rem 2.5rem 1.25rem;
+  overflow: hidden;
+}
+.modal-dialog.chart-edit-modal .modal-content .chart-edit-content {
+  width: calc(62.5rem - 2.5rem);
+  height: calc(53.0625rem - 3.375rem - 5rem - 3.125rem);
+  padding: 0 1.25rem;
+  overflow-y: auto;
 }
 .modal-dialog.chart-view-modal {
   width: 62.5rem;
