--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -205,5 +205,9 @@ $cmdb-ci-attribute-bg-color:                 $light-gray;
 $scheduler-modal-width:                      62.5rem; // 1000px
 $scheduler-modal-height:                     37.5rem; // 600px
 
+///////////////////////// 통계 차트 모달 ////////////////////////////////
+$chart-edit-modal-width:                     62.5rem; // 1000px
+$chart-edit-modal-height:                    53.0625rem; // 849px
+
 ///////////////////////// 통계 차트 미리보기 모달 /////////////////////////
 $chart-view-modal-width:                     62.5rem;  // 1000px
