--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -190,7 +190,7 @@
                                     document.getElementById('main-search').classList.add('slide-down');
                                     document.getElementById('main-banner').style.display='block';
                                 }
-                                if (scrollHeight - scrollTop === clientHeight) {
+                                if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
                                     if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                         portalSearch(true);
                                     }
@@ -199,7 +199,7 @@
                         }
                     });
 
-                    if (document.getElementById('searchValue').value !== '') {
+                    if (isNotEmpty('searchValue')) {
                         document.querySelectorAll('.row > .item-box > .item-content > .text-ellipsis').forEach(function(data) {
                             let regex = new RegExp(document.getElementById('searchValue').value, 'gi');
                             data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + document.getElementById('searchValue').value + "</span>");
