#10152 Web Portal 유효성 검증 수정(스크롤관련 원복)

--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -80,7 +80,17 @@
                         OverlayScrollbars(document.querySelector('.list-body'), {
                             className: 'scrollbar',
                             callbacks: {
-                                onScroll: nextScroll(e, offsetCount, searchFaqs(true));
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    // 스크롤이 맨 마지막에 있을 경우
+                                    if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            searchFaqs(true);
+                                        }
+                                    }
+                                }
                             }
                         });
                     }
