--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -122,7 +122,7 @@
                                     const scrollTop = e.target.scrollTop;
                                     const clientHeight = e.target.clientHeight;
                                     // 스크롤이 맨 마지막에 있을 경우
-                                    if (scrollHeight - scrollTop === clientHeight) {
+                                    if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
                                         if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                             getDownloadList(true);
                                         }
