#10152 Web Portal 유효성 검증 수정(원복)

--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -134,7 +134,7 @@
                                     const scrollTop = e.target.scrollTop;
                                     const clientHeight = e.target.clientHeight;
                                     // 스크롤이 맨 마지막에 있을 경우
-                                    if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
+                                    if (scrollHeight - scrollTop === clientHeight) {
                                         if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                             getNoticeList(true);
                                         }
